@@ -106,7 +106,7 @@ will display only critical messages and try to do the right thing without fuss.
 
 
 <varlistentry>
-<term>debconf/frontend</term>
+<term>DEBIAN_FRONTEND</term>
 <listitem><para>
 
 This boot parameter controls the type of user interface used for the
@@ -114,26 +114,26 @@ installer. The current possible parameter settings are:
 
 <itemizedlist>
 <listitem>
-<para><userinput>debconf/frontend=noninteractive</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=noninteractive</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=text</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=text</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=newt</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=newt</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=slang</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=slang</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=ncurses</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=ncurses</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=bogl</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=bogl</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=gtk</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=gtk</userinput></para>
 </listitem><listitem>
-<para><userinput>debconf/frontend=corba</userinput></para>
+<para><userinput>DEBIAN_FRONTEND=corba</userinput></para>
 </listitem>
 </itemizedlist>
 
-The default front end is <userinput>debconf/frontend=newt</userinput>.
-<userinput>debconf/frontend=text</userinput> may be preferable for
+The default front end is <userinput>DEBIAN_FRONTEND=newt</userinput>.
+<userinput>DEBIAN_FRONTEND=text</userinput> may be preferable for
 serial console installs. Generally only the
 <userinput>newt</userinput> frontend is available on default install
 media, so this is not very useful right now.
