@@ -91,6 +91,9 @@ debian-installer (20040924) UNRELEASED; urgency=high
       we have the space, so why not?
     - Update hppa to 2.4.27 kernel. Without testing it, but the 2.4.25 kernel
       udebs are no longer available. We need hppa developers..
+    - Patch from Jö Fahlke to consistently refer to DEBCONF_FRONTEND in docs.
+      debconf/frontend doesn't work everywhere yet, and it's better to only
+      support one option.
   * dann frazier
     - Add ia64 elilo .msg files from Jim Lieb
     - Add ia64 2.6 image build goo, contributed by Jim Lieb
